--- a/final/rentals.html
+++ b/final/rentals.html
@@ -43,27 +43,38 @@
 
             <h2>Honda Motor Scooters</h2>
         <p>Honda Metropolitan (49cc) - 1 person</p>
+        <img src="images/HondaMetropolitan.jpg">
         <p>Honda Dio (110cc) - 2 person</p>
+        <img src="images/HondaDio.jpg">
         <p>Honda PCX150 (149cc) - 2 person</p>
+        <img src="images/HondaPCX150.jpg">
             <h2>Side-by-Side ATVs</h2>
         <p>Honda Pioneer 1000 - 4 person</p>
+        <img src="images/HondaPioneer1000.jpg">
             <h2>Jeeps</h2>
         <p>Jeep Wrangler - 4 door manuel with A/C - 5 person</p>
+        <img src="images/JeepWrangler4door.jpg">
         <p>Jeep Wrangler - 2 door - open air - manuel - 4 person</p>
-
+        <img src="images/JeepWrangler2door.jpg">
         </main>
 
         <footer>
             <div class="ftop">
                 <div class="ftopLeft">
-                    <h2>Address</h2>
-                    <p>77689 San Miguel de Cozumel</p>
-                    <p>Quintana Roo, Mexico</p>
+                    <h2>Address 1</h2>
+                    <p>Calle 2 Nte 100, Centro</p>
+                    <p>77600 Cozumel, Q.R., Mexico</p>
+                    <h2>Address 2</h2>
+                    <p>Costera Sur</p>
+                    <p>77600 Cozumel, QROO, Mexico</p>
                 </div>
                 <div class="ftopRight">
-                    <h2>Contact Information</h2>
-                    <p>scoots@terminal.com</p>
+                    <h2>Phone Numbers</h2>
+                    <p>Telephone to Calle 2 Nte 100, Centro</p>
                     <p>+529841548899</p>
+                    <br>
+                    <p>Telephone to Calle 2 Nte 100, Centro</p>
+                    <p>+529878691984</p>
                 </div>
             </div>
             <div class="fbottom">
