--- a/final/reservations.html
+++ b/final/reservations.html
@@ -42,9 +42,8 @@
             <main class="main-join">
                 <h1>Book Your Reservation</h1>
                 <div class="grid">
-                    <h2>Rental Services & Agreements</h2>
                     <fieldset>
-                        <legend>Rental Agreement</legend> 
+                        <legend>Rental Services & Agreements</legend> 
                         <p>A $50 security deposit is required to confirm reservations.</p>
                         <p>A valid drivers license is required in hand at the time of rental.</p>
                         <p>No one under the age of 12 years of age are allowed to ride on the scooters.</p>
@@ -78,14 +77,20 @@
         <footer>
             <div class="ftop">
                 <div class="ftopLeft">
-                    <h2>Address</h2>
-                    <p>77689 San Miguel de Cozumel</p>
-                    <p>Quintana Roo, Mexico</p>
+                    <h2>Address 1</h2>
+                    <p>Calle 2 Nte 100, Centro</p>
+                    <p>77600 Cozumel, Q.R., Mexico</p>
+                    <h2>Address 2</h2>
+                    <p>Costera Sur</p>
+                    <p>77600 Cozumel, QROO, Mexico</p>
                 </div>
                 <div class="ftopRight">
-                    <h2>Contact Information</h2>
-                    <p>scoots@terminal.com</p>
+                    <h2>Phone Numbers</h2>
+                    <p>Telephone to Calle 2 Nte 100, Centro</p>
                     <p>+529841548899</p>
+                    <br>
+                    <p>Telephone to Calle 2 Nte 100, Centro</p>
+                    <p>+529878691984</p>
                 </div>
             </div>
             <div class="fbottom">
