--- a/final/scoots.html
+++ b/final/scoots.html
@@ -90,14 +90,20 @@
         <footer>
             <div class="ftop">
                 <div class="ftopLeft">
-                    <h2>Address</h2>
-                    <p>77689 San Miguel de Cozumel</p>
-                    <p>Quintana Roo, Mexico</p>
+                    <h2>Address 1</h2>
+                    <p>Calle 2 Nte 100, Centro</p>
+                    <p>77600 Cozumel, Q.R., Mexico</p>
+                    <h2>Address 2</h2>
+                    <p>Costera Sur</p>
+                    <p>77600 Cozumel, QROO, Mexico</p>
                 </div>
                 <div class="ftopRight">
-                    <h2>Contact Information</h2>
-                    <p>scoots@terminal.com</p>
+                    <h2>Phone Numbers</h2>
+                    <p>Telephone to Calle 2 Nte 100, Centro</p>
                     <p>+529841548899</p>
+                    <br>
+                    <p>Telephone to Calle 2 Nte 100, Centro</p>
+                    <p>+529878691984</p>
                 </div>
             </div>
             <div class="fbottom">
