--- a/final/contact.html
+++ b/final/contact.html
@@ -47,25 +47,32 @@
                       <label>Name* <input type="text" name="name" required="" placeholder="Your Name"></label>
                       <label>Email* <input type="email" name="email" required="" placeholder="youremail@example.com"></label>
                       <label>Comments* <input type="comment" name="comment" placeholder="Questions and Comments" required=""></label>
+                      <br>
                       <div class="buttonframe">
-                        <input type="submit" value="Submit">
+                        <button type="button" onclick="alert('Request Completed')">Submit</button>
                     </div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59761.82828124311!2d-87.19732641393072!3d20.58339065441361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e46b0c1d26b7d%3A0x715f185410f78ad5!2s77689%20Quintana%20Roo%2C%20Mexico!5e0!3m2!1sen!2sus!4v1701573907598!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d239293.76244058926!2d-87.0284159!3d20.4255199!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4ef8efb0d19327%3A0x342ebcae5c018bfc!2sCozumel!5e0!3m2!1sen!2sus!4v1701575355301!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <br>
+                    <iframe src="https://www.google.com/maps/d/embed?mid=1_Wu4MXOslojtx6WGHrn1P6MywJoJ-60&hl=en&ehbc=2E312F" width="640" height="480"></iframe>
                     </fieldset>
-                </div>    
+                </div>
         </main>
         <footer>
             <div class="ftop">
                 <div class="ftopLeft">
-                    <h2>Address</h2>
-                    <p>77689 San Miguel de Cozumel</p>
-                    <p>Quintana Roo, Mexico</p>
+                    <h2>Address 1</h2>
+                    <p>Calle 2 Nte 100, Centro</p>
+                    <p>77600 Cozumel, Q.R., Mexico</p>
+                    <h2>Address 2</h2>
+                    <p>Costera Sur</p>
+                    <p>77600 Cozumel, QROO, Mexico</p>
                 </div>
                 <div class="ftopRight">
-                    <h2>Contact Information</h2>
-                    <p>scoots@terminal.com</p>
+                    <h2>Phone Numbers</h2>
+                    <p>Telephone to Calle 2 Nte 100, Centro</p>
                     <p>+529841548899</p>
+                    <br>
+                    <p>Telephone to Calle 2 Nte 100, Centro</p>
+                    <p>+529878691984</p>
                 </div>
             </div>
             <div class="fbottom">
