--- a/final/contact.html
+++ b/final/contact.html
@@ -71,7 +71,7 @@
                     <p>Telephone to Calle 2 Nte 100, Centro</p>
                     <p>+529841548899</p>
                     <br>
-                    <p>Telephone to Calle 2 Nte 100, Centro</p>
+                    <p>Telephone to Costera Sur, Centro</p>
                     <p>+529878691984</p>
                 </div>
             </div>
