--- a/final/scoots.html
+++ b/final/scoots.html
@@ -80,9 +80,9 @@
                 <div class="card">
                     <div class="cardContent">
                         <h2>Current Weather</h2>
-                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt="icon" id="weather-icon" class="weatherIcon inline">
-                        <p id="current-temp" class="inline">Loading...</p>
-                        <p id="caption-desc" class="inline">Loading...</p>
+                        <img src="https://api.openweathermap.org/data/3.0/onecall?lat={20.5083}&lon={-86.9458}&exclude={part}&appid={8134c2938c4bf9480d8e7f85a6886a95}" alt="icon" id="weather-icon" class="weatherIcon inline">
+                        <p id="current-temp" class="inline">Current Temp: 74</p>
+                        <p id="caption-desc" class="inline">Current Humidity: 80%</p>
                     </div>
                 </div>
             </div>    
@@ -99,7 +99,7 @@
                 </div>
                 <div class="ftopRight">
                     <h2>Phone Numbers</h2>
-                    <p>Telephone to Calle 2 Nte 100, Centro</p>
+                    <p>Telephone to Costera Sur, Centro</p>
                     <p>+529841548899</p>
                     <br>
                     <p>Telephone to Calle 2 Nte 100, Centro</p>
