--- a/final/reservations.html
+++ b/final/reservations.html
@@ -69,7 +69,7 @@
                       <label>Reservation Dates* <input type="dates" name="dates" required="" placeholder="XX/XX/XXXX"></label>
                       <label>Comments/Special Arrangements* <input type="comments" name="comments" required="" placeholder="Comments Here"></label>
                       <div class="buttonframe">
-                        <input type="submit" value="Submit">
+                        <button type="button" onclick="alert('Request Completed')">Submit</button>
                     </div>
                     </fieldset>
                 </div>    
