--- a/final/scoots.html
+++ b/final/scoots.html
@@ -32,6 +32,7 @@
         </header>
         <nav id="mainnav">
             <ul>
+                <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
                 <li class="menuItem"><a href="scoots.html">Home</a></li>
                 <li class="menuItem"><a href="rentals.html">Rentals</a></li>
                 <li class="menuItem"><a href="reservations.html">Reservations</a></li>
