--- a/final/reservations.html
+++ b/final/reservations.html
@@ -32,6 +32,7 @@
     </header>
         <nav id="mainnav">
             <ul>
+                <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
                 <li class="menuItem"><a href="scoots.html">Home</a></li>
                 <li class="menuItem"><a href="rentals.html">Rentals</a></li>
                 <li class="menuItem"><a href="reservations.html">Reservations</a></li>
@@ -66,7 +67,7 @@
                       <label>City* <input type="city" name="city" required="" placeholder="City"></label>
                       <label>State* <input type="state" name="state" required="" placeholder="XX"></label>
                       <label>Zip* <input type="zip" name="zip" required="" placeholder="XXXXX"></label>
-                      <label>Reservation Dates* <input type="dates" name="dates" required="" placeholder="XX/XX/XXXX"></label>
+                      <label>Reservation Date* <input type="dates" name="dates" required="" placeholder="XX/XX/XXXX"></label>
                       <label>Comments/Special Arrangements* <input type="comments" name="comments" required="" placeholder="Comments Here"></label>
                       <div class="buttonframe">
                         <button type="button" onclick="alert('Request Completed')">Submit</button>
