--- a/final/scoots.html
+++ b/final/scoots.html
@@ -81,7 +81,7 @@
                 <div class="card">
                     <div class="cardContent">
                         <h2>Current Weather</h2>
-                        <img src="https://api.openweathermap.org/data/3.0/onecall?lat={20.5083}&lon={-86.9458}&exclude={part}&appid={8134c2938c4bf9480d8e7f85a6886a95}" alt="icon" id="weather-icon" class="weatherIcon inline">
+                        <img src="images/icon.jpg" alt="icon" id="weather-icon" class="weatherIcon inline">
                         <p id="current-temp" class="inline">Current Temp: 74</p>
                         <p id="caption-desc" class="inline">Current Humidity: 80%</p>
                     </div>
