--- a/final/rentals.html
+++ b/final/rentals.html
@@ -1,96 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scoots</title>
-    <meta name="description" content="Final Website">
-    <meta name="author" content="Seth Markle">
-    <link rel="stylesheet" href="css/little.css">
-    <link rel="stylesheet" href="css/big.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
-    <meta property="og:title" content="Scoots">
-    <meta property="og:description" content="Seth's final website">
-    <meta property="og:type" content="website">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scoots</title>
+  <meta name="description" content="Final Website">
+  <meta name="author" content="Seth Markle">
+  <link rel="stylesheet" href="css/little.css">
+  <link rel="stylesheet" href="css/big.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&amp;display=swap" rel="stylesheet">
+  <meta property="og:title" content="Scoots">
+  <meta property="og:description" content="Seth's final website">
+  <meta property="og:type" content="website">
 </head>
-
 <body>
-    <div class="viewport">
-        <hr>
-        <header>
-            <img class="logo" src="images/logo.jpg" alt="logo"></a>
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img class="social-logo" src="images/fb.png" alt="fb icon"></a>
-            <a href="https://www.tiktok.com/explore" target="_blank">
-                <img class="social-logo" src="images/tiktok.png" alt="tt icon"></a>
-        </div>
+  <div class="viewport">
+    <hr>
+    <header>
+      <img class="logo" src="images/logo.jpg" alt="logo">
+      <div class="social">
+        <a href="https://facebook.com" target="_blank"><img class="social-logo" src="images/fb.png" alt="fb icon"></a> <a href="https://www.tiktok.com/explore" target="_blank"><img class="social-logo" src="images/tiktok.png" alt="tt icon"></a>
+      </div>
     </header>
-        <nav id="mainnav">
-            <ul>
-                <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
-                <li class="menuItem"><a href="scoots.html">Home</a></li>
-                <li class="menuItem"><a href="rentals.html">Rentals</a></li>
-                <li class="menuItem"><a href="reservations.html">Reservations</a></li>
-                <li class="menuItem"><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <main>
-            <h1>Types of Rentals</h1>
-
-            <h2>Honda Motor Scooters</h2>
-        <p>Honda Metropolitan (49cc) - 1 person</p>
-        <img src="images/HondaMetropolitan.jpg">
-        <p>Honda Dio (110cc) - 2 person</p>
-        <img src="images/HondaDio.jpg">
-        <p>Honda PCX150 (149cc) - 2 person</p>
-        <img src="images/HondaPCX150.jpg">
-            <h2>Side-by-Side ATVs</h2>
-        <p>Honda Pioneer 1000 - 4 person</p>
-        <img src="images/HondaPioneer1000.jpg">
-            <h2>Jeeps</h2>
-        <p>Jeep Wrangler - 4 door manuel with A/C - 5 person</p>
-        <img src="images/JeepWrangler4door.jpg">
-        <p>Jeep Wrangler - 2 door - open air - manuel - 4 person</p>
-        <img src="images/JeepWrangler2door.jpg">
-        </main>
-
-        <footer>
-            <div class="ftop">
-                <div class="ftopLeft">
-                    <h2>Address 1</h2>
-                    <p>Calle 2 Nte 100, Centro</p>
-                    <p>77600 Cozumel, Q.R., Mexico</p>
-                    <h2>Address 2</h2>
-                    <p>Costera Sur</p>
-                    <p>77600 Cozumel, QROO, Mexico</p>
-                </div>
-                <div class="ftopRight">
-                    <h2>Phone Numbers</h2>
-                    <p>Telephone to Calle 2 Nte 100, Centro</p>
-                    <p>+529841548899</p>
-                    <br>
-                    <p>Telephone to Costera Sur, Centro</p>
-                    <p>+529878691984</p>
-                </div>
-            </div>
-            <div class="fbottom">
-                <span>© 2023</span>
-                <span>Seth Markle</span>
-                <span>WDD 230</span>
-            </div>
-        </footer>
-    </div>
-    <p class="last-update" id="lastModified"></p>
-    <p id="p1"></p>
-    <script>
+    <nav id="mainnav">
+      <ul>
+        <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
+        <li class="menuItem">
+          <a href="scoots.html">Home</a>
+        </li>
+        <li class="menuItem">
+          <a href="rentals.html">Rentals</a>
+        </li>
+        <li class="menuItem">
+          <a href="reservations.html">Reservations</a>
+        </li>
+        <li class="menuItem">
+          <a href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <main>
+      <h1>Types of Rentals</h1>
+      <div class="table"><img src="images/rentaltable.png" alt="rentaltable"></div>
+      <h2>Honda Motor Scooters</h2>
+      <p>Honda Metropolitan (49cc) - 1 person</p><img src="images/HondaMetropolitan.jpg" alt="HondaMetropolitan">
+      <p>Honda Dio (110cc) - 2 person</p><img src="images/HondaDio.jpg" alt="HondaDio">
+      <p>Honda PCX150 (149cc) - 2 person</p><img src="images/HondaPCX150.jpg" alt="HondaPCX150">
+      <h2>Side-by-Side ATVs</h2>
+      <p>Honda Pioneer 1000 - 4 person</p><img src="images/HondaPioneer1000.jpg" alt="HondaPioneer1000">
+      <h2>Jeeps</h2>
+      <p>Jeep Wrangler - 4 door manuel with A/C - 5 person</p><img src="images/JeepWrangler4door.jpg" alt="JeepWrangler4door">
+      <p>Jeep Wrangler - 2 door - open air - manuel - 4 person</p><img src="images/JeepWrangler2door.jpg" alt="JeepWrangler2door">
+    </main>
+    <footer>
+      <div class="ftop">
+        <div class="ftopLeft">
+          <h2>Address 1</h2>
+          <p>Calle 2 Nte 100, Centro</p>
+          <p>77600 Cozumel, Q.R., Mexico</p>
+          <h2>Address 2</h2>
+          <p>Costera Sur</p>
+          <p>77600 Cozumel, QROO, Mexico</p>
+        </div>
+        <div class="ftopRight">
+          <h2>Phone Numbers</h2>
+          <p>Telephone to Calle 2 Nte 100, Centro</p>
+          <p>+529841548899</p><br>
+          <p>Telephone to Costera Sur, Centro</p>
+          <p>+529878691984</p>
+        </div>
+      </div>
+      <div class="fbottom">
+        <span>© 2023</span> <span>Seth Markle</span> <span>WDD 230</span>
+      </div>
+    </footer>
+  </div>
+  <p class="last-update" id="lastModified"></p>
+  <p id="p1"></p>
+  <script>
         var date = new Date();
         document.getElementById("p1").innerHTML = date;
-    </script>
+  </script>
 </body>
-
 </html>
