--- a/final/reservations.html
+++ b/final/reservations.html
@@ -1,112 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scoots</title>
-    <meta name="description" content="Final Website">
-    <meta name="author" content="Seth Markle">
-    <link rel="stylesheet" href="css/little.css">
-    <link rel="stylesheet" href="css/big.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
-    <meta property="og:title" content="Scoots">
-    <meta property="og:description" content="Seth's final website">
-    <meta property="og:type" content="website">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scoots</title>
+  <meta name="description" content="Final Website">
+  <meta name="author" content="Seth Markle">
+  <link rel="stylesheet" href="css/little.css">
+  <link rel="stylesheet" href="css/big.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&amp;display=swap" rel="stylesheet">
+  <meta property="og:title" content="Scoots">
+  <meta property="og:description" content="Seth's final website">
+  <meta property="og:type" content="website">
 </head>
-
 <body>
-    <div class="viewport">
-        <hr>
-        <header>
-            <img class="logo" src="images/logo.jpg" alt="logo"></a>
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img class="social-logo" src="images/fb.png" alt="fb icon"></a>
-            <a href="https://www.tiktok.com/explore" target="_blank">
-                <img class="social-logo" src="images/tiktok.png" alt="tt icon"></a>
-        </div>
+  <div class="viewport">
+    <hr>
+    <header>
+      <img class="logo" src="images/logo.jpg" alt="logo">
+      <div class="social">
+        <a href="https://facebook.com" target="_blank"><img class="social-logo" src="images/fb.png" alt="fb icon"></a> <a href="https://www.tiktok.com/explore" target="_blank"><img class="social-logo" src="images/tiktok.png" alt="tt icon"></a>
+      </div>
     </header>
-        <nav id="mainnav">
-            <ul>
-                <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
-                <li class="menuItem"><a href="scoots.html">Home</a></li>
-                <li class="menuItem"><a href="rentals.html">Rentals</a></li>
-                <li class="menuItem"><a href="reservations.html">Reservations</a></li>
-                <li class="menuItem"><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <main>
-            <main class="main-join">
-                <h1>Book Your Reservation</h1>
-                <div class="grid">
-                    <fieldset>
-                        <legend>Rental Services & Agreements</legend> 
-                        <p>A $50 security deposit is required to confirm reservations.</p>
-                        <p>A valid drivers license is required in hand at the time of rental.</p>
-                        <p>No one under the age of 12 years of age are allowed to ride on the scooters.</p>
-                        <p>Fuel charge is not included.</p>
-                        <p>Unlimited mileage.</p>
-                        <p>Liability insurance is included.</p>
-                        <p>Damage insurance is available for purchase.</p>
-                        <p>Free delivery to Cozumel hotels or Airbnbs for 2+ day rentals.</p>
-                        <p>Payment via Google Pay, Apple Pay, cash, credit card, debit card, or venmo.</p>
-                        <p>Rentals may be returned to either physical location.</p>
-                    </fieldset>
-                </div>
-                <div class="blocks">
-                    <fieldset>
-                      <legend>Reserve Your Reservation</legend> 
-                      <label>Name* <input type="text" name="name" required="" placeholder="Your Name"></label>
-                      <label>Email* <input type="email" name="email" required="" placeholder="youremail@example.com"></label>
-                      <label>Phone Number* <input type="phone" name="phone" placeholder="(XXX)XXX-XXXX" required=""></label>
-                      <label>Street Address* <input type="address" name="address" required="" placeholder="123 St"></label>
-                      <label>City* <input type="city" name="city" required="" placeholder="City"></label>
-                      <label>State* <input type="state" name="state" required="" placeholder="XX"></label>
-                      <label>Zip* <input type="zip" name="zip" required="" placeholder="XXXXX"></label>
-                      <label>Reservation Date* <input type="dates" name="dates" required="" placeholder="XX/XX/XXXX"></label>
-                      <label>Comments/Special Arrangements* <input type="comments" name="comments" required="" placeholder="Comments Here"></label>
-                      <div class="buttonframe">
-                        <button type="button" onclick="alert('Request Completed')">Submit</button>
-                    </div>
-                    </fieldset>
-                </div>    
-        </main>
-        <footer>
-            <div class="ftop">
-                <div class="ftopLeft">
-                    <h2>Address 1</h2>
-                    <p>Calle 2 Nte 100, Centro</p>
-                    <p>77600 Cozumel, Q.R., Mexico</p>
-                    <h2>Address 2</h2>
-                    <p>Costera Sur</p>
-                    <p>77600 Cozumel, QROO, Mexico</p>
-                </div>
-                <div class="ftopRight">
-                    <h2>Phone Numbers</h2>
-                    <p>Telephone to Calle 2 Nte 100, Centro</p>
-                    <p>+529841548899</p>
-                    <br>
-                    <p>Telephone to Costera Sur, Centro</p>
-                    <p>+529878691984</p>
-                </div>
+    <nav id="mainnav">
+      <ul>
+        <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
+        <li class="menuItem">
+          <a href="scoots.html">Home</a>
+        </li>
+        <li class="menuItem">
+          <a href="rentals.html">Rentals</a>
+        </li>
+        <li class="menuItem">
+          <a href="reservations.html">Reservations</a>
+        </li>
+        <li class="menuItem">
+          <a href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <main>
+      <main class="main-join">
+        <h1>Book Your Reservation</h1>
+        <div class="grid">
+          <fieldset>
+            <legend>Rental Services & Agreements</legend>
+            <p>A $50 security deposit is required to confirm reservations.</p>
+            <p>A valid drivers license is required in hand at the time of rental.</p>
+            <p>No one under the age of 12 years of age are allowed to ride on the scooters.</p>
+            <p>Fuel charge is not included.</p>
+            <p>Unlimited mileage.</p>
+            <p>Liability insurance is included.</p>
+            <p>Damage insurance is available for purchase.</p>
+            <p>Free delivery to Cozumel hotels or Airbnbs for 2+ day rentals.</p>
+            <p>Payment via Google Pay, Apple Pay, cash, credit card, debit card, or venmo.</p>
+            <p>Rentals may be returned to either physical location.</p>
+          </fieldset>
+        </div>
+        <div class="blocks">
+          <fieldset>
+            <legend>Reserve Your Reservation</legend> <label>Name* <input type="text" name="name" required="" placeholder="Your Name"></label> <label>Email* <input type="email" name="email" required="" placeholder="youremail@example.com"></label> <label>Phone Number* <input type="phone" name="phone" placeholder="(XXX)XXX-XXXX" required=""></label> <label>Street Address* <input type="address" name="address" required="" placeholder="123 St"></label> <label>City* <input type="city" name="city" required="" placeholder="City"></label> <label>State* <input type="state" name="state" required="" placeholder="XX"></label> <label>Zip* <input type="zip" name="zip" required="" placeholder="XXXXX"></label> <label>Reservation Date* <input type="dates" name="dates" required="" placeholder="XX/XX/XXXX"></label> <label>Comments/Special Arrangements* <input type="comments" name="comments" required="" placeholder="Comments Here"></label>
+            <div class="buttonframe">
+              <button type="button" onclick="alert('Request Completed')">Submit</button>
             </div>
-            <div class="fbottom">
-                <span>© 2023</span>
-                <span>Seth Markle</span>
-                <span>WDD 230</span>
-            </div>
-        </footer>
-    </div>
-    <p class="last-update" id="lastModified"></p>
-    <p id="p1"></p>
-    <script>
+          </fieldset>
+        </div>
+      </main>
+      <footer>
+        <div class="ftop">
+          <div class="ftopLeft">
+            <h2>Address 1</h2>
+            <p>Calle 2 Nte 100, Centro</p>
+            <p>77600 Cozumel, Q.R., Mexico</p>
+            <h2>Address 2</h2>
+            <p>Costera Sur</p>
+            <p>77600 Cozumel, QROO, Mexico</p>
+          </div>
+          <div class="ftopRight">
+            <h2>Phone Numbers</h2>
+            <p>Telephone to Calle 2 Nte 100, Centro</p>
+            <p>+529841548899</p><br>
+            <p>Telephone to Costera Sur, Centro</p>
+            <p>+529878691984</p>
+          </div>
+        </div>
+        <div class="fbottom">
+          <span>© 2023</span> <span>Seth Markle</span> <span>WDD 230</span>
+        </div>
+      </footer>
+    </main>
+  </div>
+  <p class="last-update" id="lastModified"></p>
+  <p id="p1"></p>
+  <script>
         var date = new Date();
         document.getElementById("p1").innerHTML = date;
-    </script>
+  </script>
 </body>
-
 </html>
