--- a/final/scoots.html
+++ b/final/scoots.html
@@ -1,126 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scoots</title>
-    <meta name="description" content="Final Website">
-    <meta name="author" content="Seth Markle">
-    <link rel="stylesheet" href="css/little.css">
-    <link rel="stylesheet" href="css/big.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
-    <meta property="og:title" content="Scoots">
-    <meta property="og:description" content="Seth's final website">
-    <meta property="og:type" content="website">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scoots</title>
+  <meta name="description" content="Final Website">
+  <meta name="author" content="Seth Markle">
+  <link rel="stylesheet" href="css/little.css">
+  <link rel="stylesheet" href="css/big.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&amp;display=swap" rel="stylesheet">
+  <meta property="og:title" content="Scoots">
+  <meta property="og:description" content="Seth's final website">
+  <meta property="og:type" content="website">
 </head>
-
 <body>
-    <div class="viewport">
-        <hr>
-        <header>
-                <img class="logo" src="images/logo.jpg" alt="logo"></a>
-            <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                    <img class="social-logo" src="images/fb.png" alt="fb icon"></a>
-                <a href="https://www.tiktok.com/explore" target="_blank">
-                    <img class="social-logo" src="images/tiktok.png" alt="tt icon"></a>
-            </div>
-        </header>
-        <nav id="mainnav">
-            <ul>
-                <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
-                <li class="menuItem"><a href="scoots.html">Home</a></li>
-                <li class="menuItem"><a href="rentals.html">Rentals</a></li>
-                <li class="menuItem"><a href="reservations.html">Reservations</a></li>
-                <li class="menuItem"><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <a href="reservations.html" class="button nohover">Make your reservation today!</a>
-        <main>
-            <div class="textContent">
-                <h1>Scoots</h1>
-                <p><h2>Welcome to Scoots where we have you covered on simple rentals.
-                       If you are looking to rent a power scooter, atv, or jeep during
-                       your vaction stop than look no further.</h2>  
-                </p>
-            </div>
-                <div class="card">
-                    <h2>Scooters</h2>
-                    <p><h3>We have electric single and two passenger scooters for rent.</h3></p>
-                    <picture>
-                        <img src="images/scooter.jpg" alt="scooter">
-                    </picture>
-                </div>
-                <div class="card">
-                    <h2>ATV's</h2>
-                    <p><h3>If you are looking for something to go off roading in we have you covered.</h3></p>
-                    <picture>
-                        <img src="images/atv.jpg" alt="atv">
-                    </picture>    
-                </div>
-                <div class="card">
-                    <h2>Jeeps</h2>
-                    <p><h3>If you are traveling a lot you may want these instead.</h3></p>
-                    <picture>
-                        <img src="images/jeep.jpg" alt="jeep">
-                    </picture>
-                </div>
-                <div class="card">
-                    <h2>Our Dealership</h2>
-                    <p><h3>Come check out what we have to suit your adventure.</h3></p>
-                    <picture>
-                        <img src="images/dealer.jpg" alt="dealer">
-                    </picture>
-                </div>
-            </div>
-            <div class="cards weather">
-                <div class="card">
-                    <div class="cardContent">
-                        <h2>Current Weather</h2>
-                        <img src="images/icon.jpg" alt="icon" id="weather-icon" class="weatherIcon inline">
-                        <p id="current-temp" class="inline">Current Temp: 74</p>
-                        <p id="caption-desc" class="inline">Current Humidity: 80%</p>
-                    </div>
-                </div>
-            </div>    
-        </main>
-        <footer>
-            <div class="ftop">
-                <div class="ftopLeft">
-                    <h2>Address 1</h2>
-                    <p>Calle 2 Nte 100, Centro</p>
-                    <p>77600 Cozumel, Q.R., Mexico</p>
-                    <h2>Address 2</h2>
-                    <p>Costera Sur</p>
-                    <p>77600 Cozumel, QROO, Mexico</p>
-                </div>
-                <div class="ftopRight">
-                    <h2>Phone Numbers</h2>
-                    <p>Telephone to Costera Sur, Centro</p>
-                    <p>+529841548899</p>
-                    <br>
-                    <p>Telephone to Calle 2 Nte 100, Centro</p>
-                    <p>+529878691984</p>
-                </div>
-            </div>
-            <div class="fbottom">
-                <span>© 2023</span>
-                <span>Seth Markle</span>
-                <span>WDD 230</span>
-            </div>
-        </footer>
+  <div class="viewport">
+    <hr>
+    <header>
+      <img class="logo" src="images/logo.jpg" alt="logo">
+      <div class="social">
+        <a href="https://facebook.com" target="_blank"><img class="social-logo" src="images/fb.png" alt="fb icon"></a> <a href="https://www.tiktok.com/explore" target="_blank"><img class="social-logo" src="images/tiktok.png" alt="tt icon"></a>
+      </div>
+    </header>
+    <nav id="mainnav">
+      <ul>
+        <div class="hamburger"><img class="button" src="images/hamburgerbutton.png" alt="hamburger"></div>
+        <li class="menuItem">
+          <a href="scoots.html">Home</a>
+        </li>
+        <li class="menuItem">
+          <a href="rentals.html">Rentals</a>
+        </li>
+        <li class="menuItem">
+          <a href="reservations.html">Reservations</a>
+        </li>
+        <li class="menuItem">
+          <a href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav><a href="reservations.html" class="button nohover">Make your reservation today!</a>
+    <main>
+      <div class="textContent">
+        <h1>Scoots</h1>
+        <h2>Welcome to Scoots where we have you covered on simple rentals. If you are looking to rent a power scooter, atv, or jeep during your vaction stop than look no further. Allow us to assist you on your cruise and or vacation travel needs.</h2>
+      </div>
+      <div class="card">
+        <h2>Scooters</h2>
+        <h3>We have electric single and two passenger scooters for rent.</h3><picture><img src="images/scooter.jpg" alt="scooter"></picture>
+      </div>
+      <div class="card">
+        <h2>ATV's</h2>
+        <h3>If you are looking for something to go off roading in we have you covered.</h3><picture><img src="images/atv.jpg" alt="atv"></picture>
+      </div>
+      <div class="card">
+        <h2>Jeeps</h2>
+        <h3>If you are traveling a lot you may want one these instead.</h3><picture><img src="images/jeep.jpg" alt="jeep"></picture>
+      </div>
+      <div class="card">
+        <h2>Our Dealership</h2>
+        <h3>Come check out what we have to suit your adventure.</h3><picture><img src="images/dealer.jpg" alt="dealer"></picture>
+      </div>
+    </main>
+  </div>
+  <div class="cards weather">
+    <div class="card">
+      <div class="cardContent">
+        <h2>Current Weather</h2><img src="images/icon.jpg" alt="icon" id="weather-icon" class="weatherIcon inline">
+        <p id="current-temp" class="inline">Current Temp: 74</p>
+        <p id="caption-desc" class="inline">Current Humidity: 80%</p>
+      </div>
     </div>
-    <p class="last-update" id="lastModified"></p>
-    <p id="p1"></p>
-    <script src="scripts/weather.js"></script>
-    <script>
+  </div>
+  <footer>
+    <div class="ftop">
+      <div class="ftopLeft">
+        <h2>Address 1</h2>
+        <p>Calle 2 Nte 100, Centro</p>
+        <p>77600 Cozumel, Q.R., Mexico</p>
+        <h2>Address 2</h2>
+        <p>Costera Sur</p>
+        <p>77600 Cozumel, QROO, Mexico</p>
+      </div>
+      <div class="ftopRight">
+        <h2>Phone Numbers</h2>
+        <p>Telephone to Costera Sur, Centro</p>
+        <p>+529841548899</p><br>
+        <p>Telephone to Calle 2 Nte 100, Centro</p>
+        <p>+529878691984</p>
+      </div>
+    </div>
+    <div class="fbottom">
+      <span>© 2023</span> <span>Seth Markle</span> <span>WDD 230</span>
+    </div>
+  </footer>
+  <p class="last-update" id="lastModified"></p>
+  <p id="p1"></p>
+  <script src="scripts/weather.js"></script> 
+  <script>
+
+
         var date = new Date();
         document.getElementById("p1").innerHTML = date;
-    </script>
+  </script>
 </body>
-
 </html>
