--- a/final/scoots.html
+++ b/final/scoots.html
@@ -27,7 +27,7 @@
     </header>
     <nav id="mainnav">
       <ul>
-        <div class="hamburger"><img class="button" src="images/hamburgerbutton.png" alt="hamburger"></div>
+        <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
         <li class="menuItem">
           <a href="scoots.html">Home</a>
         </li>
@@ -87,7 +87,7 @@
       <div class="ftopRight">
         <h2>Phone Numbers</h2>
         <p>Telephone to Costera Sur, Centro</p>
-        <p>+529841548899</p><br>
+        <p>+529841548899</p><br><br>
         <p>Telephone to Calle 2 Nte 100, Centro</p>
         <p>+529878691984</p>
       </div>
